2월 19일 업뎃 질문리스트

--- a/_posts/2017-02-12-6주차 기술일지.markdown
+++ b/_posts/2017-02-12-6주차 기술일지.markdown
@@ -7,6 +7,8 @@ categories: jekyll update
 
 # 토스트루키 캠프 4기 [기술교육 6주차] - 개발 시작 5주차
 
+## Analytic Hierarchy Process
+
 ### AHP란 무엇인가?
 
 우리나라말로 _계층 분석 방법_ 이라 칭하고 있다. 다수 대안에 대한 다면적 평가 기준을 통한 의사 결정 지원 방법의 하나이다.
