타이틀수정

--- a/_posts/2017-02-19-7주차 기술일지.markdown
+++ b/_posts/2017-02-19-7주차 기술일지.markdown
@@ -5,7 +5,7 @@ date:   2017-02-19 15:57:11 +0900
 categories: jekyll update
 ---
 
-# 토스트루키 캠프 4기 [기술교육 7주차] - 개발 시작 6주차
+# [토스트루키 캠프 4기] 질문 LIST
 
 ## 목적
 
