--- a/_posts/2017-02-26-주제별 관련 자료 모음.markdown
+++ b/_posts/2017-02-26-주제별 관련 자료 모음.markdown
@@ -18,9 +18,30 @@ categories: jekyll update
 ### 가이드
 
 __Dooray__
-*출처 - https://nhnent.dooray.com/project/to/BaseCamp-4%EA%B8%B0-%EA%B3%B5%EC%A7%80%EC%82%AC%ED%95%AD/125?userWorkflowClass=registered,working*
+*출처 - [Dooray](https://nhnent.dooray.com/project/to/BaseCamp-4%EA%B8%B0-%EA%B3%B5%EC%A7%80%EC%82%AC%ED%95%AD/125?userWorkflowClass=registered,working)*
 
 __devcafe__
-*출처 - http://devcafe.nhnent.com/index.php?mid=intro&act=dispWikiContent&vid=skey*
+*출처 - [devcafe](http://devcafe.nhnent.com/index.php?mid=intro&act=dispWikiContent&vid=skey)*
+
+## Linux Memory
+
+### Memory Usage
+
+#### 개요
+
+#### 예시 1
+
+#### 예시 2 (명목 100%)
+
+#### 스크립트
+
+#### 같이 보기
+
+#### 주석
+
+#### 참고 자료
+
+
+*출처 - [ZETAWIKI - 리눅스 명목메모리 사용률, 실질 메모리 사용률](http://zetawiki.com/wiki/%EB%A6%AC%EB%88%85%EC%8A%A4_%EB%AA%85%EB%AA%A9%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%82%AC%EC%9A%A9%EB%A5%A0,_%EC%8B%A4%EC%A7%88%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%82%AC%EC%9A%A9%EB%A5%A0)
 
 ## 기타
