최종발표  scheme 업데이트

--- a/_posts/2222-12-31-루키사랑TF 최종발표 Note.markdown
+++ b/_posts/2222-12-31-루키사랑TF 최종발표 Note.markdown
@@ -52,4 +52,25 @@ categories: jekyll update
 
  - Click Click !!
 
- ## MyPage 기능 Part.B (주최자를 위한 Dashboard)
+## MyPage 기능 Part.B (주최자를 위한 Dashboard)
+
+### 설명
+
+  - 선순환구조. 어떻게 ? (순환 그래프 보여주기)
+    - 핵심은 통계! -> 어떤 통계? (모임별 통계)
+      - 참여율, 연령대
+      - 일별 방문자 수, 일별 신청자 수
+      - 유입 검색어, 유입 경로, 유입 경로 상세
+    - 주최자에게 자료를 제공
+      - 주최자는 제공받은 자료를 사용하여 모임 기획에 전략적으로 사용
+      - 어떤 자료가 어떻게 도움을 줄 수 있는가?
+
+### 시연
+
+  - 어떤 통계 자료가 있는지?
+    - 이것이 어떻게 도움을 주는지?
+  - *(사람들이 참여하기)* 모임 페이지에 접속하고 참가한에 따라 변하는 그래프
+  - 그래프가 정상 작동 함을 확인하고 시연 마무리
+
+## 각자 느낀점!
+  - 각자 느낀점을 간략히 정리해서 present.
